<resources>
    <string name="add_friend">Add Friends</string>
    <string name="address_book">Contacts</string>
    <string name="address_book_name_head">Contacts friend - %s</string>
    <string name="all_comment">All comments</string>
    <string name="anonymous_publish">Instantly post your work, and get more fans!</string>
    <string name="app_name_res_0x7d090005">EllipsizeTextView</string>
    <string name="area">Region</string>
    <string name="at_mine">Mentions</string>
    <string name="attention">Followed</string>
    <string name="bind_phone_sub_title">You can search for Contact friends after binding</string>
    <string name="challenge_award">Reward</string>
    <string name="challenge_guide_award">Obtain reward</string>
    <string name="challenge_guide_award_intro">Not only will you obtain various rewards, you\'ll also obtain C coin to exchange for rewards afterwards.</string>
    <string name="challenge_guide_goto_challenge">Take a look</string>
    <string name="challenge_guide_start">Start Challenge</string>
    <string name="challenge_guide_title">About Capture Challenge</string>
    <string name="challenge_guide_what">What is Capture Challenge</string>
    <string name="challenge_guide_what_intro">Engage in challenge, get the attention and votes of users worldwide, and obtain a final ranking.</string>
    <string name="challenge_king">Challenge King</string>
    <string name="challenge_official">Official</string>
    <string name="challenge_rec">For You</string>
    <string name="challenge_tag_s">Selected</string>
    <string name="chat_input_hint">Say something…</string>
    <string name="comment_answer">Reply</string>
    <string name="comment_can_not_empty">Comment cannot be blank</string>
    <string name="comment_content_limit_new">Comment too long, 140 words or less</string>
    <string name="comment_deleted">Content has been deleted</string>
    <string name="comment_failed">Resend</string>
    <string name="comment_max_pic_count">Can select 9 images at most</string>
    <string name="contact_book">Contacts</string>
    <string name="current_device_not_support_task">Sorry, your device cannot join challenge because it isn\'t compatible</string>
    <string name="delete_success_res_0x7d09001f">Deleted</string>
    <string name="emoticon_download">Download</string>
    <string name="emoticon_downloading">Downloading…</string>
    <string name="empty_res_0x7d090023" />
    <string name="empty_at_text">No one has @ you yet~</string>
    <string name="empty_can_not_find_friends">No friends found\n go check out the Plaza</string>
    <string name="empty_comment_text">No messages received~</string>
    <string name="empty_fans_guest_text">They don\'t have any fans yet, become their first fan~</string>
    <string name="empty_fans_mine_text">No fans yet\n be more interactive~</string>
    <string name="empty_guest_work">What a humble person\n nothing going on with them~</string>
    <string name="empty_like_text">Darn, no Likes!</string>
    <string name="empty_mine_work">Chilly in here\n go share your exciting moments~</string>
    <string name="empty_notice_text">No notifications yet</string>
    <string name="empty_profile_attention_guest_tip">No one has followed you yet.</string>
    <string name="empty_profile_attention_mine_tip">No one has followed you yet.</string>
    <string name="empty_search_text">Nothing found\n change a keyword and try again?</string>
    <string name="error_master_16001">You are already a master</string>
    <string name="error_master_16002">Request under review</string>
    <string name="error_master_16003">Request doesn\'t exist</string>
    <string name="expand">[expand]</string>
    <string name="facebook_friend">Facebook friend</string>
    <string name="fans">Fans</string>
    <string name="feature_default_content">Featured</string>
    <string name="featured_videos">Featured videos</string>
    <string name="feeds_ad_enter">Learn more</string>
    <string name="feeds_detail_like_num">Liked %1$d Posts</string>
    <string name="feeds_dynamic_content">New updates from %1$s etc.</string>
    <string name="feeds_dynamic_title">Friends\' new activities</string>
    <string name="feeds_follow_more_friends">More friends</string>
    <string name="feeds_follow_title_content">Hi, %1$s\n no follows \n being lonely sucks~</string>
    <string name="feeds_follow_title_recommend">Recommend</string>
    <string name="feeds_interested">Interested people</string>
    <string name="feeds_interested_guide">Your friends are here</string>
    <string name="feeds_photo_chanllenge">Capture Challenge</string>
    <string name="feeds_photo_like_no_num">Like</string>
    <string name="feeds_publish_guide">Let the world see me</string>
    <string name="feeds_share_wait_res_0x7d090044">Image loading…</string>
    <string name="flower">flowers</string>
    <string name="fold_up">[fold]</string>
    <string name="friend_dynamic">Friend Moments</string>
    <string name="friend_dynamic_follow">Followed</string>
    <string name="goto_challenge">Go to Challenge</string>
    <string name="info_camera">Shoot</string>
    <string name="info_camera_guide">Tap here to shoot with the same sticker</string>
    <string name="info_flower_guide">6 flowers every day, to give to those you like!</string>
    <string name="info_guide_like">Double click the screen to like!</string>
    <string name="info_more_video">to watch more videos!</string>
    <string name="info_photo_movie_guide">photos becomes a movie, try it.</string>
    <string name="info_play">Continue watching</string>
    <string name="info_ranking_no">ranking</string>
    <string name="info_scroll">Slide up</string>
    <string name="input_comment">Enter what you want to say…</string>
    <string name="inspire_comment">Comment</string>
    <string name="inspire_expire_time">%1$d days left</string>
    <string name="inspire_expired">Over</string>
    <string name="inspire_follow">Follow</string>
    <string name="inspire_participate_short">Join</string>
    <string name="inspire_title_msg_mine">My messages</string>
    <string name="join_task_num">%1$s challengers</string>
    <string name="let_you_see_world">Let you see the world</string>
    <string name="load_error">Load failed</string>
    <string name="make_video">Record</string>
    <string name="master">Master</string>
    <string name="master_apply">Apply for master</string>
    <string name="master_apply_btn_text_0">Apply to be a master</string>
    <string name="master_apply_btn_text_1">Application in process</string>
    <string name="master_apply_btn_text_2">@string/master_apply_btn_text_0</string>
    <string name="master_apply_btn_text_3">You\'re already a master</string>
    <string name="master_apply_commit_tip">Submitted, please wait for approval</string>
    <string name="master_apply_page_msg_1">Symbol of a master</string>
    <string name="master_apply_page_msg_2">You\'ll be recommended to users worldwide</string>
    <string name="master_apply_page_msg_3">Let more people see your posts</string>
    <string name="master_apply_page_title_1">Exclusive medal</string>
    <string name="master_apply_page_title_2">More Followers</string>
    <string name="master_apply_page_title_3">Recommended</string>
    <string name="master_banner_desc_one">More followers</string>
    <string name="master_banner_desc_two">Symbol of honor</string>
    <string name="master_banner_title_one">Global recommended</string>
    <string name="master_banner_title_two">Exclusive medal</string>
    <string name="master_intro">Master Intro</string>
    <string name="master_list_apply">Apply now</string>
    <string name="master_list_enter">Master ranking</string>
    <string name="master_list_hint">Rank by number of photos and interactive level for the last 3 days</string>
    <string name="master_wait_info_msg">Your request is under review, please wait!</string>
    <string name="master_waiting_text">Please wait</string>
    <string name="mater_apply_contact_way">Contact</string>
    <string name="mater_apply_edittext_contact_way">Enter your email</string>
    <string name="mater_apply_edittext_self_introduction">Specialty / interests / hobbies, etc.</string>
    <string name="mater_apply_hint">If you meet the conditions, you\'ll get approved more easily!</string>
    <string name="mater_apply_hint_require1">Passion for mobile phone photography and willing to share</string>
    <string name="mater_apply_hint_require2">Have unique interests or perspectives, such as recording trip, shooting foods etc.</string>
    <string name="mater_apply_hint_require3">Is already a star or popular network Reds</string>
    <string name="mater_apply_self_introduction">Self intro</string>
    <string name="act_subs_notice">CAMERA360 VIP subscription notice</string>
    <string name="act_united_notice">United VIP</string>
    <string name="cancel">Cancel</string>
    <string name="go_on">Continue</string>
    <string name="logined">Signed into</string>
    <string name="no_face_tip_content">The features use face recognition technology and are currently unavailable.</string>
    <string name="no_face_tip_end">Please try to edit the image manually</string>
    <string name="no_face_tip_title">No face detected</string>
    <string name="pay_failed_survey_option_0">I don\'t use this service enough</string>
    <string name="pay_failed_survey_option_1">I found an alternative app</string>
    <string name="pay_failed_survey_option_2">Too expensive</string>
    <string name="pay_failed_survey_option_3">I don’t use these payment methods</string>
    <string name="pay_failed_survey_option_4">I want to try more before I subscribe</string>
    <string name="pay_failed_survey_option_5">Technical issues</string>
    <string name="pay_failed_survey_option_6">Other</string>
    <string name="pay_failed_survey_title">What\'s making you leave?</string>
    <string name="pg_pay_auth_text">Accept User Agreement &amp; Privacy Policy</string>
    <string name="text_btn_email_for_get_album_back">Submit</string>
    <string name="text_camera360_vip">CAMERA360 VIP</string>
    <string name="tip_time_limited_discount">Special Offer</string>
    <string name="vip_china_price">Only 1.99 USD/ month, 23.99 USD/ year</string>
    <string name="vip_fun_desc">Access ALL Features &amp; Remove Ads</string>
    <string name="vip_fun_item_text1">No advertising</string>
    <string name="vip_fun_item_text2">Try the latest features</string>
    <string name="vip_fun_item_text3">100+ Professional portrait beautifying tool</string>
    <string name="vip_fun_item_text4">200+ Personalized makeup feature</string>
    <string name="vip_fun_item_text5">600+ Filters of different styles and cute stickers, updated weekly</string>
    <string name="vip_fun_item_text6">All features are unlocked, including skin smoothing, facial reshaping, face and body lifting.</string>
    <string name="vip_fun_item_text7">VIP dedicated Butler</string>
    <string name="vip_half_pop_up_window_3_days_free">3-Day Free trial</string>
    <string name="vip_half_pop_up_window_gp_price_description">%1$s after trial, only %2$s/month</string>
    <string name="vip_half_pop_up_window_privacy">隐私政策</string>
    <string name="vip_half_pop_up_window_protocol">服务协议</string>
    <string name="vip_half_pop_up_window_sub_title">Enjoy all premium features</string>
    <string name="vip_half_pop_up_window_unlock_vip_title">VIP UPGRADE</string>
    <string name="vip_half_screen_fun_item_text1">免广告打扰</string>
    <string name="vip_half_screen_fun_item_text2">最新功能抢鲜体验</string>
    <string name="vip_half_screen_fun_item_text3">100+ 专业人像精修工具</string>
    <string name="vip_half_screen_fun_item_text4">200+ 定制美妆，风格可盐可甜</string>
    <string name="vip_half_screen_fun_item_text5">600+ 风格滤镜&amp;萌拍贴纸，每周更新</string>
    <string name="vip_half_screen_fun_item_text6">皮肤焕新 五官重塑 瘦脸塑身 全功能解锁</string>
    <string name="vip_wx_code">WeChat 18161211965</string>
</resources>