<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/imgBackgroudBubble" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_vip_bg_circle" android:layout_alignParentRight="true" app:layout_marginRightPercent="10.0%" app:layout_marginTopPercent="16.0%"/>
    <com.zhy.android.percent.support.PercentLinearLayout android:orientation="vertical" android:id="@+id/layout_fun_items" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginLeft="32dp" android:layout_marginRight="16dp" app:layout_heightPercent="50%" app:layout_marginTopPercent="14.0%">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/clHead" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="5">
            <us.pinguo.ui.widget.AutofitTextView android:textSize="24dp" android:textStyle="bold" android:textColor="#121212" android:gravity="center" android:id="@+id/tv_vip_camera360" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_camera360_vip" android:maxLines="1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:minTextSize="18dp" app:precision="1"/>
            <us.pinguo.ui.widget.AutofitTextView android:textSize="12dp" android:textColor="#ffffff" android:gravity="center" android:id="@+id/txtLimitedDiscount" android:background="@drawable/bg_limited_discount" android:visibility="gone" android:layout_width="70dp" android:layout_height="23dp" android:layout_marginTop="-5dp" android:text="@string/tip_time_limited_discount" android:maxLines="1" android:singleLine="true" android:layout_marginStart="10dp" app:layout_constraintStart_toEndOf="@+id/tv_vip_camera360" app:layout_constraintTop_toTopOf="@+id/tv_vip_camera360" app:minTextSize="8dp" app:precision="1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <us.pinguo.ui.widget.AutofitTextView android:textSize="14dp" android:textColor="#848484" android:id="@+id/tv_subs_vip_descrip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vip_fun_desc" android:maxLines="1" android:layout_weight="5" android:layout_alignParentBottom="true" app:layout_marginBottomPercent="4.0%" app:minTextSize="12dp" app:precision="1"/>
        <TextView android:id="@+id/vip_fun_item1" android:text="@string/vip_fun_item_text1" style="@style/VipFunTextItemStyle"/>
        <TextView android:id="@+id/vip_fun_item2" android:text="@string/vip_fun_item_text2" style="@style/VipFunTextItemStyle"/>
        <TextView android:id="@+id/vip_fun_item3" android:text="@string/vip_fun_item_text3" style="@style/VipFunTextItemStyle"/>
        <TextView android:id="@+id/vip_fun_item4" android:text="@string/vip_fun_item_text4" style="@style/VipFunTextItemStyle"/>
        <TextView android:id="@+id/vip_fun_item5" android:text="@string/vip_fun_item_text5" app:minTextSize="12dp" app:precision="1" style="@style/VipFunTextItemStyle"/>
        <TextView android:id="@+id/vip_fun_item6" android:text="@string/vip_fun_item_text6" app:minTextSize="12dp" app:precision="1" style="@style/VipFunTextItemStyle"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/vip_fun_item7" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="5">
            <us.pinguo.ui.widget.AutofitTextView android:textSize="@dimen/vip_fun_item_text_size" android:textColor="#222222" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/vip_fun_item_text7" android:drawableLeft="@drawable/ic_vip_check_mark" android:drawablePadding="6dp"/>
            <TextView android:textSize="9dp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/supportText" android:background="@drawable/vip_fun_item_tel_bg" android:paddingLeft="6dp" android:paddingRight="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6dp" android:text="@string/vip_wx_code" android:height="14dp"/>
        </LinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/agreement_privacy_layout" android:layout_below="@+id/layout_fun_items">
        <us.pinguo.ui.widget.AlphaPressedAutofitTextView android:textSize="18dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/tlbtn_subscripte" android:background="@drawable/guide_vp_btn" android:layout_width="260dp" android:layout_height="48dp" android:text="@string/go_on" android:layout_centerInParent="true" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="12dp" android:textColor="#848484" android:id="@+id/vip_price" android:layout_width="wrap_content" android:layout_height="20dp" android:layout_marginTop="6dp" android:text="@string/vip_china_price" android:layout_below="@+id/tlbtn_subscripte" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/agreement_privacy_layout" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="36dp" android:layout_above="@+id/ll_subscr_notice" android:layout_centerHorizontal="true">
        <androidx.appcompat.widget.AppCompatCheckBox android:id="@+id/agreement_checkbox" android:layout_width="36dp" android:layout_height="36dp" android:button="@drawable/checkbox_vip_style"/>
        <TextView android:textSize="10dp" android:textColor="@color/color_c360_vip_grey" android:layout_gravity="center_vertical" android:id="@+id/agreement_content" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pg_pay_auth_text" android:maxLines="2"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_subscr_notice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:layout_marginBottomPercent="1.8125%" app:layout_marginTopPercent="0.5%">
        <TextView android:textSize="10dp" android:textColor="#bca4f1" android:id="@+id/tv_united_notice" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/act_united_notice" android:maxLines="1"/>
        <TextView android:textSize="10dp" android:textColor="@color/color_c360_vip_grey" android:id="@+id/tv_or_notice" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6dp" android:layout_marginRight="6dp" android:text="|" android:maxLines="1"/>
        <us.pinguo.ui.widget.AutofitTextView android:textSize="10dp" android:textColor="@color/color_c360_vip_grey" android:id="@+id/tv_subscr_notice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/act_subs_notice" android:maxLines="1" app:minTextSize="10dp" app:precision="1"/>
        <View android:background="@drawable/shape_rectangle" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="4dp"/>
    </LinearLayout>
    <TextView android:textSize="15dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/txtToast" android:background="#7f2d2d2d" android:visibility="gone" android:layout_width="144dp" android:layout_height="32dp" android:text="@string/logined" android:layout_centerInParent="true"/>
</com.zhy.android.percent.support.PercentRelativeLayout>
