<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:paddingTop="15dp" android:layout_width="280dp" android:layout_height="436dp">
    <us.pinguo.ui.widget.AutofitTextView android:textSize="20dp" android:textStyle="bold" android:textColor="@color/color_camera_theme_black" android:gravity="center" android:id="@+id/pay_failed_survey_title" android:layout_width="0dp" android:layout_height="35dp" android:layout_marginTop="15dp" android:text="@string/pay_failed_survey_title" android:lines="1" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/pay_failed_survey_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginStart="15dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/pay_failed_survey_title">
        <CheckBox android:theme="@style/CheckBoxTheme" android:textSize="15dp" android:textColor="@color/color_camera_theme_black" android:id="@+id/pay_failed_survey_option_0" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginRight="16dp" android:text="@string/pay_failed_survey_option_0"/>
        <CheckBox android:theme="@style/CheckBoxTheme" android:textSize="15dp" android:textColor="@color/color_camera_theme_black" android:id="@+id/pay_failed_survey_option_1" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginRight="16dp" android:text="@string/pay_failed_survey_option_1"/>
        <CheckBox android:theme="@style/CheckBoxTheme" android:textSize="15dp" android:textColor="@color/color_camera_theme_black" android:id="@+id/pay_failed_survey_option_2" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginRight="16dp" android:text="@string/pay_failed_survey_option_2"/>
        <CheckBox android:theme="@style/CheckBoxTheme" android:textSize="15dp" android:textColor="@color/color_camera_theme_black" android:id="@+id/pay_failed_survey_option_3" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginRight="16dp" android:text="@string/pay_failed_survey_option_3"/>
        <CheckBox android:theme="@style/CheckBoxTheme" android:textSize="15dp" android:textColor="@color/color_camera_theme_black" android:id="@+id/pay_failed_survey_option_4" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginRight="16dp" android:text="@string/pay_failed_survey_option_4"/>
        <CheckBox android:theme="@style/CheckBoxTheme" android:textSize="15dp" android:textColor="@color/color_camera_theme_black" android:id="@+id/pay_failed_survey_option_5" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginRight="16dp" android:text="@string/pay_failed_survey_option_5"/>
        <CheckBox android:theme="@style/CheckBoxTheme" android:textSize="15dp" android:textColor="@color/color_camera_theme_black" android:id="@+id/pay_failed_survey_option_6" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginRight="16dp" android:text="@string/pay_failed_survey_option_6"/>
    </LinearLayout>
    <Button android:textSize="14dp" android:textColor="@color/color_camera_theme_black" android:id="@+id/pay_failed_survey_cancel" android:background="@color/transparent" android:layout_width="88dp" android:layout_height="40dp" android:layout_marginTop="18dp" android:text="@string/cancel" app:layout_constraintEnd_toStartOf="@+id/pay_failed_survey_submit" app:layout_constraintTop_toBottomOf="@+id/pay_failed_survey_group"/>
    <Button android:textSize="14dp" android:textColor="@color/color_camera_theme_light" android:id="@+id/pay_failed_survey_submit" android:background="@drawable/selector_pay_failed_survey_submit_enable" android:layout_width="88dp" android:layout_height="40dp" android:layout_marginTop="18dp" android:text="@string/text_btn_email_for_get_album_back" android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/pay_failed_survey_group"/>
    <Space android:layout_width="0dp" android:layout_height="20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/pay_failed_survey_submit"/>
</androidx.constraintlayout.widget.ConstraintLayout>
