<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/flVipHalfScreenB" android:background="#4d000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="bottom" android:id="@+id/clContent" android:background="@drawable/vip_half_screen_popup_round_bg" android:paddingBottom="42dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <View android:background="@drawable/ic_vip_half_screen_bg" android:layout_width="120dp" android:layout_height="93.5dp" android:layout_marginEnd="60dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="25dp" android:textStyle="bold" android:textColor="#2d2d2d" android:gravity="center" android:id="@+id/txtUnlockVip" android:layout_width="wrap_content" android:layout_height="35dp" android:layout_marginTop="16dp" android:text="@string/vip_half_pop_up_window_unlock_vip_title" android:drawablePadding="8dp" android:drawableEnd="@drawable/ic_vip_half_screen_vip_icon" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="14dp" android:textColor="#999999" android:gravity="center" android:id="@+id/txtSubTitle" android:layout_width="wrap_content" android:layout_height="20dp" android:text="@string/vip_half_pop_up_window_sub_title" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txtUnlockVip"/>
        <ImageView android:id="@+id/imgClose" android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/ic_vip_half_screen_close" android:scaleType="centerInside" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/txtUnlockVip"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/llMemberRights" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/txtSubTitle">
            <us.pinguo.ui.widget.AutofitTextView android:id="@+id/txtMemberRights1" android:text="@string/vip_half_screen_fun_item_text1" style="@style/VipHalfScreenFunTextItemStyle"/>
            <us.pinguo.ui.widget.AutofitTextView android:id="@+id/txtMemberRights2" android:layout_marginTop="12dp" android:text="@string/vip_half_screen_fun_item_text2" style="@style/VipHalfScreenFunTextItemStyle"/>
            <us.pinguo.ui.widget.AutofitTextView android:id="@+id/txtMemberRights3" android:layout_marginTop="12dp" android:text="@string/vip_half_screen_fun_item_text3" style="@style/VipHalfScreenFunTextItemStyle"/>
            <us.pinguo.ui.widget.AutofitTextView android:id="@+id/txtMemberRights4" android:layout_marginTop="12dp" android:text="@string/vip_half_screen_fun_item_text4" style="@style/VipHalfScreenFunTextItemStyle"/>
            <us.pinguo.ui.widget.AutofitTextView android:id="@+id/txtMemberRights5" android:layout_marginTop="12dp" android:text="@string/vip_half_screen_fun_item_text5" app:minTextSize="12dp" app:precision="1" style="@style/VipHalfScreenFunTextItemStyle"/>
            <us.pinguo.ui.widget.AutofitTextView android:id="@+id/txtMemberRights6" android:layout_marginTop="12dp" android:text="@string/vip_half_screen_fun_item_text6" app:minTextSize="12dp" app:precision="1" style="@style/VipHalfScreenFunTextItemStyle"/>
        </LinearLayout>
        <us.pinguo.ui.widget.AutofitTextView android:textSize="11dp" android:textColor="#999999" android:gravity="center" android:id="@+id/txtPriceDescription" android:layout_width="0dp" android:layout_height="15dp" android:layout_marginTop="32dp" android:text="@string/vip_half_pop_up_window_gp_price_description" android:maxLines="1" android:singleLine="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/llMemberRights" app:minTextSize="8dp"/>
        <us.pinguo.ui.widget.AutofitTextView android:textSize="17dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/txtSubscribe" android:background="@drawable/vip_half_screen_subscription_btn_bg" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="7dp" android:text="@string/vip_half_pop_up_window_3_days_free" android:maxLines="1" android:layout_centerHorizontal="true" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/txtPriceDescription" app:minTextSize="14dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="15dp" android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/txtSubscribe">
            <View android:id="@+id/vDivider" android:background="#999999" android:layout_width="1dp" android:layout_height="13dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:textSize="11dp" android:textColor="#999999" android:gravity="center" android:id="@+id/txtProtocol" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/vip_half_pop_up_window_protocol" android:layout_marginEnd="10dp" app:layout_constraintEnd_toStartOf="@+id/vDivider"/>
            <TextView android:textSize="11dp" android:textColor="#999999" android:gravity="center" android:id="@+id/txtPrivacy" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/vip_half_pop_up_window_privacy" android:layout_marginStart="10dp" app:layout_constraintStart_toEndOf="@+id/vDivider"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
