<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/no_face_tip_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24dp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60dp" android:text="@string/no_face_tip_title"/>
    <TextView android:textSize="12dp" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="48dp" android:layout_marginTop="8dp" android:layout_marginRight="48dp" android:text="@string/no_face_tip_content"/>
    <TextView android:textSize="12dp" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="48dp" android:layout_marginTop="8dp" android:layout_marginRight="48dp" android:text="@string/no_face_tip_end"/>
</LinearLayout>
